; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/platforms/cell/extr_beat_spu_priv1.c_int_mask_or.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/platforms/cell/extr_beat_spu_priv1.c_int_mask_or.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.spu = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.spu*, i32, i32)* @int_mask_or to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @int_mask_or(%struct.spu* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.spu*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.spu* %0, %struct.spu** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load %struct.spu*, %struct.spu** %4, align 8
  %9 = load i32, i32* %5, align 4
  %10 = call i32 @_int_mask_get(%struct.spu* %8, i32 %9)
  store i32 %10, i32* %7, align 4
  %11 = load %struct.spu*, %struct.spu** %4, align 8
  %12 = load i32, i32* %5, align 4
  %13 = load i32, i32* %7, align 4
  %14 = load i32, i32* %6, align 4
  %15 = or i32 %13, %14
  %16 = call i32 @_int_mask_set(%struct.spu* %11, i32 %12, i32 %15)
  ret void
}

declare dso_local i32 @_int_mask_get(%struct.spu*, i32) #1

declare dso_local i32 @_int_mask_set(%struct.spu*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
